welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: not found: value tap
	for (x<-0 to tap.length-1) {
                     ^