welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	var y,z:Int=0;
	for (x<-0 to tap.length-1) {
		if (value==nums(x)) {
			y=y+1;
			z=z+1;
		}
		if (x==tap.length-1 && value!=nums(x) && z==0) {
			y=-1
		}
	}
	return y
}
